nothing, jut images

--- a/assets/scss/02-index.scss
+++ b/assets/scss/02-index.scss
@@ -9,7 +9,7 @@
 		height: 100%;
 		width: 100%;
 		margin-top: -100px;
-		background-image: url("http://placehold.it/50x50");
+		background-image: url("Untitled-1.jpg");
 		background-size: cover;
 		background-position: center;
 		background-attachment: fixed;
