--- a/assets/scss/04-process.scss
+++ b/assets/scss/04-process.scss
@@ -1,7 +1,7 @@
 #process{
 	padding-top: 8em;
 	.subsection{
-		background-image: url("http://placehold.it/50x50");
+		background-image: url("sketch.jpg");
 		background-size: cover;
 		background-position: center;
 		background-attachment: fixed;
