--- a/assets/scss/00-global.scss
+++ b/assets/scss/00-global.scss
@@ -82,3 +82,12 @@ blockquote{
 		transform-origin: 100% 100%;
 	}
 }
+
+.social-colour{
+	fill: $organge;
+	stroke: $organge;
+}
+.social-colour-1{
+	fill: $darkOrgange;
+	stroke: $darkOrgange;
+}
