--- a/assets/scss/settings.scss
+++ b/assets/scss/settings.scss
@@ -10,11 +10,12 @@ $max: max-width;
 
 // DEFINE COLOURS
 $organge:rgb(227,94,48);
+$darkOrgange:rgb(255,100,50);
 $white:#fff;
 $yellow:rgb(251,230,57);
 $blue:rgb(44,157,199);
 $black:#333;
-$backgroundcolour:#ddd;
+$backgroundcolour:#fff;
 
 // Other random things...
 $width: 90%;
