--- a/assets/scss/00-global.scss
+++ b/assets/scss/00-global.scss
@@ -2,7 +2,7 @@ body,html{
 	padding: 0;
 	margin: 0;
 	width: 100%;
-	font-family: sans-serif;
+	font-family: 'Lato', sans-serif;
 	font-weight: 400;
 	
 	-webkit-font-smoothing: antialiased;
@@ -27,6 +27,13 @@ ul,li,p,h1,h2,h3,h4,h5,blockquote{
 	font-weight: normal;
 }
 
+p {
+	font-size: 1.03em;
+	text-align: left;
+	line-height: 1.7em;
+	//font-weight: 200;
+	letter-spacing: 0.035em;
+}
 #wrapper{
 	width: 100%;
 	position: relative;
