--- a/assets/scss/03-about.scss
+++ b/assets/scss/03-about.scss
@@ -23,6 +23,11 @@
 		vertical-align: top;
 		display: inline-block;
 		padding: 5em 0;
+		@include at-query ($max, $inbetween) {
+			width: 90%;
+			margin: 0 auto;
+			display: block;
+		}		
 	}
 
 	.right{
@@ -31,6 +36,10 @@
 		right: 0;
 		padding: 0;
 		position: absolute;
+		@include at-query ($max, $inbetween) {
+			position: relative;
+			padding: 0 0 5em 0;
+		}
 	}
 	.table{
 		height: 100%;
