--- a/assets/scss/04-process.scss
+++ b/assets/scss/04-process.scss
@@ -10,8 +10,12 @@
 		// @include vendorize(transform,translateY(50px));
 
 
-		.shadded{
+		.shadded{	
 			width: 55%;
+			@include at-query ($max, $large) {
+				width: 100%;
+				background-color: rgba(0,0,0,0.5);
+			}
 			position: relative;
 			text-align: right;
 			@include transition(opacity,0.35s,ease-in-out);
@@ -20,6 +24,9 @@
 				width: 350%;
 				height: 350%;
 				background-color: rgba(0,0,0,0.5);
+				@include at-query ($max, $large) {
+					background-color: transparent;
+				}
 				position: absolute;
 				display: block;
 				z-index: 1;
@@ -33,8 +40,16 @@
 		&:nth-child(2n){
 			.shadded{
 				left: 45%;
+				@include at-query ($max, $large) {
+					left: 0%;
+				}
 				text-align: left;
 				.contain{
+					@include at-query ($max, $large) {
+						text-align: left;
+						padding-left: 5%;
+						padding-right: 0%;
+					}
 					text-align: right;
 				}
 				.fit::before{
@@ -53,9 +68,19 @@
 		position: relative;
 		display: inline-block;
 		z-index: 3;
-		// width: $width/2;
+		
 		max-width: $indsideWidth/2;
 		text-align: left;
+		@include at-query ($max, $large) {
+			text-align: right;
+			width: 40%;
+			padding-right: 5%;
+		}
+		@include at-query ($max, $inbetween) {
+			width: 90%;
+			margin: 0 auto;
+			display: block;
+		}
 	}
 	.fit{
 		padding: 6em 0;
@@ -63,6 +88,9 @@
 		width: 70%;
 		// min-width: 400px;
 		display: inline-block;
+		@include at-query ($max, $large) {
+			width: 100%;
+		}		
 	}
 
 	h3{
