--- a/assets/scss/05-contact.scss
+++ b/assets/scss/05-contact.scss
@@ -13,6 +13,9 @@
 		max-width: 600px;
 		margin: 0 auto;
 		padding-top: 4em;
+		@include at-query ($max, $large) {
+			width: 100%;
+		}
 
 		p{
 			font-size: 1.7em;
@@ -25,14 +28,22 @@
 			li{
 				width: 50%;
 				display: inline-block;
-				text-align: center;				
+				text-align: center;	
+				vertical-align: top;			
+				@include at-query ($max, $medium) {
+					width: 90%;
+					padding-top: 2em;
+				}
 			}
 			ul{
-				margin-top: 2em;
-				padding: 0em
+				margin-top: 1em;
+				padding: 0em;
+				li{
+					padding: 0;
+				}
 			}
 		}
-		.crossline{
+		.crossline{			
 			&::before,&::after{
 				border-top: 1px solid $organge;
 			}
@@ -46,6 +57,9 @@
 			text-align: center;
 			max-width: 60%;
 			margin: 0 auto;
+			@include at-query ($max, $large) {
+				max-width: 100%;
+			}
 		}
 		p:last-child{
 			padding-top: 2em;
@@ -64,6 +78,9 @@
 	>h3{
 		max-width: 80%;
 		margin: 0 auto;
+		@include at-query ($max, $large) {
+			width: 100%;
+		}
 	}
 
 	>ul{
@@ -72,6 +89,9 @@
 		li{
 			padding: 0 2em;
 			display: inline-block;
+			@include at-query ($max, $inbetween) {
+				padding: 0 1em;
+			}
 			a{
 				display: inline-block;
 				line-height: 0;
