--- a/assets/scss/05-contact.scss
+++ b/assets/scss/05-contact.scss
@@ -46,6 +46,15 @@
 		.crossline{			
 			&::before,&::after{
 				border-top: 1px solid $organge;
+				width: 6em;
+			}
+			&::before{
+				// left: 100%;
+				@include vendorize(transform,rotate(-35deg));
+			}
+			&::after{
+				// right: 100%;
+				@include vendorize(transform,rotate(-35deg));
 			}
 		}
 	}
@@ -67,9 +76,8 @@
 			font-size: 1.5em;
 		}
 		a{
-			text-decoration: none;
-			color: $black;
-			a:hover{
+			color: inherit;
+			&:hover{
 				color: $blue;
 			}
 		}
@@ -79,18 +87,21 @@
 		max-width: 80%;
 		margin: 0 auto;
 		@include at-query ($max, $large) {
-			width: 100%;
+			max-width: 100%;
 		}
 	}
 
 	>ul{
 		text-align: center;
-		padding: 8em 0;
+		padding: 8em 0 0 0;
 		li{
 			padding: 0 2em;
 			display: inline-block;
 			@include at-query ($max, $inbetween) {
 				padding: 0 1em;
+			}
+			@include at-query ($max, $medium) {
+				padding: 0 0.5em;
 			}
 			a{
 				display: inline-block;
