some small touchs to ben brott

--- a/assets/scss/03-about.scss
+++ b/assets/scss/03-about.scss
@@ -130,4 +130,10 @@
 		line-height: 1.2em;
 		padding-top: 0.3em;
 	}
+	#corevalues p{
+		color: inherit;
+		&::before{
+			content: none;
+		}
+	}
 }
