--- a/assets/scss/02-index.scss
+++ b/assets/scss/02-index.scss
@@ -9,12 +9,15 @@
 		height: 100%;
 		width: 100%;
 		margin-top: -100px;
-		background-image:url('/assets/img/01_home-huge.jpg');
+		background-image:url('/assets/img/home-large.jpg');
 		@include at-query ($max, $large) {
-			background-image:url('/assets/img/01_home-large.jpg');
+			background-image:url('/assets/img/home-large.jpg');
 		}
 		@include at-query ($max, $medium) {
-			background-image:url('/assets/img/01_home-medium.jpg');
+			background-image:url('/assets/img/home-medium.jpg');
+		}
+		@include at-query ($retina, $pxratio) {
+			background-image:url('/assets/img/home-@2x.jpg');
 		}
 
 		background-size: cover;
