--- a/assets/scss/00-global.scss
+++ b/assets/scss/00-global.scss
@@ -1,3 +1,6 @@
+// http://www.cssmatic.com/gradient-generator#'\-moz\-linear\-gradient\%28top\%2C\%20rgba\%2833\%2C33\%2C33\%2C1\%29\%200\%25\%2C\%20rgba\%2833\%2C33\%2C33\%2C0\%29\%20100\%25\%29\%3B'
+//   background: linear-gradient(to bottom, rgba(33,33,33,1) -70%, rgba(33,33,33,0) 100%);
+
 body,html{
 	padding: 0;
 	margin: 0;
