--- a/assets/scss/05-contact.scss
+++ b/assets/scss/05-contact.scss
@@ -6,7 +6,7 @@
 		font-size: $bigfont;
 		line-height: $bigfontline;
 		text-align: center;
-		padding-bottom: 15rem;
+		// padding-bottom: 15rem;
 	}
 
 	.tighter{
