--- a/assets/scss/05-contact.scss
+++ b/assets/scss/05-contact.scss
@@ -94,7 +94,7 @@
 
 	>ul{
 		text-align: center;
-		padding: 8em 0 0 0;
+		padding: 4em 0 3em 0;
 		li{
 			padding: 0 2em;
 			display: inline-block;
